RESOLVED FIXED126589
r161364 caused JSC tests regression on non-DFG builds (e.g. C Loop and Windows)
https://bugs.webkit.org/show_bug.cgi?id=126589
Summary r161364 caused JSC tests regression on non-DFG builds (e.g. C Loop and Windows)
Mark Lam
Reported 2014-01-07 12:20:45 PST
The removal of ENABLE(VALUE_PROFILER) in http://trac.webkit.org/changeset/161364 broke all non-DFG builds. That includes the C loop LLINT and Windows (only baseline JIT) builds. Per Filip, we'll resolve this by taking the small memory and perf hit on the non-DFG builds, and just do the value profiling work even though the profiling results won't be used by these non-DFG builds. Patch for the fix coming soon. ref: <rdar://problem/15758371>
Attachments
the patch. (3.83 KB, patch)
2014-01-07 12:37 PST, Mark Lam
fpizlo: review+
Mark Lam
Comment 1 2014-01-07 12:37:21 PST
Created attachment 220540 [details] the patch.
Filip Pizlo
Comment 2 2014-01-07 12:42:14 PST
Comment on attachment 220540 [details] the patch. r=me
Mark Lam
Comment 3 2014-01-07 12:44:36 PST
Thanks for the review. Landed in r161446: <http://trac.webkit.org/r161446>.
Note You need to log in before you can comment on or make changes to this bug.